// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tesing subscription snapshot rendering empty subscription 1`] = `
<MenuItem>
  <div
    className="subscription"
  >
    <div>
      <Image
        as="img"
        avatar={true}
        src="http://via.placeholder.com/28x28"
        ui={true}
      />
      <span />
    </div>
  </div>
</MenuItem>
`;

exports[`tesing subscription snapshot rendering subscription when it is broadcasting 1`] = `
<MenuItem>
  <div
    className="subscription"
  >
    <div>
      <Image
        as="img"
        avatar={true}
        src="http://via.placeholder.com/28x28"
        ui={true}
      />
      <span>
        udemy
      </span>
    </div>
    <Icon
      as="i"
      name="signal"
    />
  </div>
</MenuItem>
`;

exports[`tesing subscription snapshot rendering subscription when non broadcasting  1`] = `
<MenuItem>
  <div
    className="subscription"
  >
    <div>
      <Image
        as="img"
        avatar={true}
        src="http://via.placeholder.com/28x28"
        ui={true}
      />
      <span>
        udemy
      </span>
    </div>
    <span
      className="new-videos-count"
    >
      4
    </span>
  </div>
</MenuItem>
`;
